--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <meta name="description"
             content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" type="image/png" href="logontp.png">
