--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description"
             content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="header.css">
+    <!-- <link rel="stylesheet" href="header.css"> -->
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
