--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- <link rel="stylesheet" href="header.css"> -->
      <link rel="preconnect" href="https://maps.googleapis.com">
+     <meta http-equiv="Cache-control" content="public, max-age=2592000">
     <link rel="stylesheet" href="/contact.css" media="print" onload="this.media='all'">
 <noscript><link rel="stylesheet" href="/contact.css"></noscript>
     <link rel="icon" type="image/png" href="logontp.png">
